<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CompanyX</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="permission_description">Grant read permission to Company</string>
    <string name="add_company">Add company</string>
    <string name="add_office">Add office</string>
    <string name="add_location">Add location</string>
    <string name="add_images">Add images</string>
    <string name="title_activity_add_company">AddCompany</string>
    <string name="name">Name</string>
    <string name="website">Website</string>
    <string name="info">info</string>
    <string name="add">Add</string>
    <string name="location">Location</string>
    <string name="image">Image</string>
    <string name="office">Office</string>
    <string name="company">Company</string>
    <string name="title_activity_add_location">Add Location</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="title_activity_add_office">Add Office</string>
    <string name="select_company">Select Office</string>
    <string name="enter_phone">Enter phone number</string>
    <string name="title_activity_update_company">Update Company</string>
    <string name="update">Update</string>
    <string name="remove">Remove</string>
    <string name="back">Back</string>
    <string name="title_activity_location_list">Location list</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_image">Add image</string>
    <string name="title_activity_office_list">Office List</string>
    <string name="title_activity_update_office">Update office</string>
    <string name="title_activity_update_location">Update location</string>
   
    <string name="companies">companies</string>
    <string name="offices">offices</string>
    <string name="locations">locations</string>
	    <string name="edit_location">Edit location</string>
</resources>