<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kb50.companyx.UpdateLocation" >

    <EditText
        android:id="@+id/countryField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/addressField"
        android:layout_alignParentTop="true"
        android:layout_marginTop="74dp"
        android:ems="10"
        android:hint="@string/country" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/updateButton"
        android:layout_alignBottom="@+id/updateButton"
        android:layout_alignRight="@+id/cityField"
        android:onClick="onClick"
        android:text="@string/back" />

    <EditText
        android:id="@+id/cityField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/addressField"
        android:layout_below="@+id/countryField"
        android:ems="10"
        android:hint="@string/city" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/addressField"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/back"
        android:onClick="onClick"
        android:text="@string/update" />

    <EditText
        android:id="@+id/addressField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/back"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/address" />

    <Button
        android:id="@+id/removeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/updateButton"
        android:layout_alignRight="@+id/back"
        android:layout_below="@+id/updateButton"
        android:onClick="onClick"
        android:text="@string/remove" />

</RelativeLayout>