<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kb50.companyx.UpdateCompany" >

    <EditText
        android:id="@+id/infoField"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/websiteField"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/info"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/websiteField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/infoField"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/website" />

    <EditText
        android:id="@+id/nameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/websiteField"
        android:layout_alignLeft="@+id/websiteField"
        android:ems="10"
        android:hint="@string/name" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/infoField"
        android:layout_below="@+id/infoField"
        android:layout_marginTop="34dp"
        android:onClick="onClick"
        android:text="@string/update" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/updateButton"
        android:layout_alignBottom="@+id/updateButton"
        android:layout_alignRight="@+id/infoField"
        android:layout_toRightOf="@+id/updateButton"
        android:onClick="onClick"
        android:text="@string/back" />

    <Button
        android:id="@+id/removeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/updateButton"
        android:layout_alignRight="@+id/backButton"
        android:layout_below="@+id/updateButton"
         android:onClick="onClick"
        android:text="@string/remove" />
    
</RelativeLayout>
