<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kb50.companyx.AddCompany" >
    

    <EditText
        android:id="@+id/infoField"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/websiteField"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/info"
        android:inputType="textMultiLine" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/websiteField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/infoField"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/website" />

    <EditText
        android:id="@+id/nameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/websiteField"
        android:layout_alignLeft="@+id/websiteField"
        android:ems="10"
        android:hint="@string/name" />

    <TextView
        android:id="@+id/viewOffice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/infoField"
        android:layout_below="@+id/infoField"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/add_office"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/addButton"
        android:layout_below="@+id/viewOffice"
        android:onClick="onClick"
        android:text="@string/add_office" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/viewOffice"
        android:layout_alignRight="@+id/infoField"
        android:layout_below="@+id/add_office"
        android:onClick="onClick"
        android:text="@string/add" />

    <Button
        android:id="@+id/addImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/addButton"
        android:layout_toRightOf="@+id/add_office"
        android:onClick="onClick"
        android:text="Add image" />

</RelativeLayout>