<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kb50.companyx.AddOffice" >

    <EditText
        android:id="@+id/phoneField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_phone"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="phone" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/officeList"
        android:layout_below="@+id/phoneField"
        android:text="@string/select_company"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/officeList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/addOfficeButton"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp" >

    </ListView>

    <Button
        android:id="@+id/addOfficeButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/officeList"
        android:layout_alignParentBottom="true"
        android:text="@string/add" />

</RelativeLayout>
